List all stories

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -13,6 +13,7 @@
 @import "pages/lost"
 @import "pages/photo"
 @import "pages/story"
+@import "pages/stories"
 
 /*
  * Generate a Woff2 file from: https://www.fontsquirrel.com/tools/webfont-generator
