--- a/src/style/pages/_about.sass
+++ b/src/style/pages/_about.sass
@@ -9,7 +9,7 @@ section#about
         margin-bottom: -.5rem
         img
             max-width: 100%
-            box-shadow: 0 0 3px rgba(114, 114, 114, 0.46)
+            box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2)
             border-radius: 0 $border-radius-lg 0 $border-radius-lg
         p.credit
             position: absolute
