--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -1,14 +1,19 @@
 @import "../base/variables"
 
+.period
+    font-size: .9rem
+    font-family: 'MyBodyFont', sans-serif
+    margin-top: .5rem
+
+.applause-story
+    .icon
+        filter: $filter-body-color
+        height: $nav-icon-size
+
 section#story
     margin-top: #{$nav-bar-height}
     overflow-y: auto
     height: calc(100vh - #{$nav-bar-height})
-    h1
-        .period
-            font-size: .9rem
-            font-family: 'MyBodyFont', sans-serif
-            margin-top: .5rem
     hr
         max-width: 30%
     .map-extra
@@ -71,9 +76,6 @@ section#story
     .applause-story
         text-align: center
         height: 2rem
-        .icon
-            filter: $filter-body-color
-            height: $nav-icon-size
     .chart-container
         padding-top: 1rem /* the legend on the bottom adds space that needs to be compensated on the top */
         width: 100%
