Improve UX on GIF selection

--- a/src/style/components/_giphy.sass
+++ b/src/style/components/_giphy.sass
@@ -30,7 +30,9 @@ ul.giphy-list
                 opacity: 1
                 transition: 0.3s ease-in-out
             button
-                transform: translate(0, calc(-100% - 1.5rem))
+                position: absolute
+                left: -0.5rem
+                bottom: 0
                 opacity: 0
                 transition: 0.3s ease-in-out
             &:hover
