Friendly Captcha integration

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -3,6 +3,7 @@
 @import "base/typography"
 @import "base/variables"
 @import "components/applause"
+@import "components/captcha"
 @import "components/giphy"
 @import "components/icon"
 @import "components/modal"
