Improve feedback on applause

--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -75,7 +75,8 @@ section#story
             text-align: right
     .applause-story
         text-align: center
-        height: 2rem
+        height: 2rem /* fixed to avoid page height change and avoid auto scrolling up */
+        margin-top: 1rem
     .chart-container
         padding-top: 1rem /* the legend on the bottom adds space that needs to be compensated on the top */
         width: 100%
