--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -2,11 +2,11 @@
 @import "base/helpers"
 @import "base/typography"
 @import "base/variables"
-@import "components/applause"
 @import "components/captcha"
 @import "components/giphy"
 @import "components/icon"
 @import "components/modal"
+@import "components/toast"
 @import "layout/form"
 @import "layout/grid"
 @import "layout/navigation"
