More modern style

--- a/src/style/base/_typography.sass
+++ b/src/style/base/_typography.sass
@@ -36,7 +36,7 @@ strong
     font-family: 'MyBoldFont', sans-serif
     letter-spacing: 1px
 
-ul.blabla, .story-content ul /* list in a text */
+ul.blabla /* list in a text */
     margin: 1rem 0 1rem 0
     @media (max-width: 1024px)
         margin: .5rem 0 .5rem 0
