--- a/src/style/layout/_form.sass
+++ b/src/style/layout/_form.sass
@@ -3,7 +3,7 @@
 button:not([class^='mapboxgl-ctrl-']):not(.light-icon-button), .button
     background: $button-background
     color: white !important
-    padding: 0.5rem 1rem
+    padding: 0.4rem 1rem 0.5rem 1rem
     border-radius: 0 $border-radius-lg 0 $border-radius-lg
     cursor: pointer
     display: inline-block
