--- a/src/style/components/_giphy.sass
+++ b/src/style/components/_giphy.sass
@@ -1,14 +1,14 @@
-@import "../base/variables"
+@import '../base/variables'
 
 .giphy-finder
     text-align: center
     form
         max-width: inherit
-        background-color: white
+        background-color: #fff
         position: sticky
         top: 0
         z-index: 10
-        padding-bottom: .5rem
+        padding-bottom: 0.5rem
         label
             display: inline
             input
@@ -23,7 +23,7 @@ ul.giphy-list
     list-style: none
     margin-bottom: 1rem
     li
-        margin: .5rem !important /* also reset modal style */
+        margin: 0.5rem !important /* also reset modal style */
         img.giphy
             border-radius: $border-radius-sm
         .selectable
