--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -1,20 +1,20 @@
-@import "base/base"
-@import "base/helpers"
-@import "base/typography"
-@import "base/variables"
-@import "components/captcha"
-@import "components/giphy"
-@import "components/icon"
-@import "components/modal"
-@import "components/toast"
-@import "layout/form"
-@import "layout/grid"
-@import "layout/navigation"
-@import "pages/about"
-@import "pages/lost"
-@import "pages/photo"
-@import "pages/story"
-@import "pages/stories"
+@import 'base/base'
+@import 'base/helpers'
+@import 'base/typography'
+@import 'base/variables'
+@import 'components/captcha'
+@import 'components/giphy'
+@import 'components/icon'
+@import 'components/modal'
+@import 'components/toast'
+@import 'layout/form'
+@import 'layout/grid'
+@import 'layout/navigation'
+@import 'pages/about'
+@import 'pages/lost'
+@import 'pages/photo'
+@import 'pages/story'
+@import 'pages/stories'
 
 /*
  * Generate a Woff2 file from: https://www.fontsquirrel.com/tools/webfont-generator
