--- a/src/style/base/_helpers.sass
+++ b/src/style/base/_helpers.sass
@@ -1,11 +1,11 @@
 .mr-3
-    margin-right: .3rem
+    margin-right: 0.3rem
 
 .ml-3
-    margin-left: .3rem
+    margin-left: 0.3rem
 
 .mt-3
-    margin-top: .3rem
+    margin-top: 0.3rem
 
 .m-30
     margin: 3rem
@@ -26,7 +26,7 @@
     text-align: right
 
 .critical-error
-    color: red
+    color: #f00
 
 .float-right
     float: right
