--- a/src/style/base/_typography.sass
+++ b/src/style/base/_typography.sass
@@ -1,6 +1,7 @@
 @import "variables"
 
-body, html
+body,
+html
     line-height: $text-line-height
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
@@ -23,7 +24,7 @@ h1
 
 h3
     margin-top: 1.1rem
-    margin-bottom: .6rem
+    margin-bottom: 0.6rem
     font-weight: normal
     font-size: 1.2rem
     font-family: 'MyBoldFont', sans-serif
@@ -36,10 +37,11 @@ strong
     font-family: 'MyBoldFont', sans-serif
     letter-spacing: 1px
 
-ul.blabla /* list in a text */
-    margin: 1rem 0 1rem 0
+/* list in a text */
+ul.blabla
+    margin: 1rem 0
     @media (max-width: 1024px)
-        margin: .5rem 0 .5rem 0
+        margin: 0.5rem 0
     list-style: none
     li::before
         content: ''
