--- a/src/style/base/_variables.sass
+++ b/src/style/base/_variables.sass
@@ -4,9 +4,9 @@ $nav-hover-bg-color: #e0e0e0
 $strong-border-color: #939393
 $nav-font-size: 1.15rem
 $nav-icon-size: 1.6rem
-$nav-item-space: .4rem
-$border-radius-sm: .2rem
-$border-radius-lg: .6rem
+$nav-item-space: 0.4rem
+$border-radius-sm: 0.2rem
+$border-radius-lg: 0.6rem
 $nav-bar-height: calc(4 * #{$nav-item-space} - (#{$nav-font-size} - #{$nav-icon-size}) / 2 + #{$nav-icon-size})
 $global-font-size: 1.1rem /* the .1 create a more modern style and canvas (elevation chart) much neater. */
 $p-vertical-margin: 1rem
