--- a/src/style/components/_captcha.sass
+++ b/src/style/components/_captcha.sass
@@ -1,4 +1,4 @@
-@import "../base/variables"
+@import '../base/variables'
 
 .captcha
     .frc-content
@@ -10,7 +10,7 @@
         border: 0
         font-weight: inherit
         &:focus
-            border: none
+            border: 0
     .frc-banner /* there is already a link in the privacy policy */
         display: none
     .frc-text /* display only the first line, hide the detailed error */
