--- a/src/style/components/_icon.sass
+++ b/src/style/components/_icon.sass
@@ -1,4 +1,4 @@
-@import "../base/variables"
+@import '../base/variables'
 
 img.icon
     height: 1rem
@@ -7,7 +7,7 @@ img.icon
     height: 27px
     width: 27px
     vertical-align: -6px
-    background-image: url("../icons/favicon/compressed_favicon.svg")
+    background-image: url('../icons/favicon/compressed_favicon.svg')
     background-size: 27px
     display: inline-block
 
@@ -15,14 +15,15 @@ img.icon
 .short-item
     .logo
         @media (orientation: landscape)
-            margin: 0 -.2rem
+            margin: 0 -0.2rem
         @media (orientation: portrait)
-            margin: 0 -.2rem -.1rem -.1rem
+            margin: 0 -0.2rem -0.1rem -0.1rem
 
 a.button-icon
     img.icon
         filter: $filter-button-background
-        transition: all .2s ease-in
-    &:hover, &:focus
+        transition: all 0.2s ease-in
+    &:hover,
+    &:focus
         img.icon
             filter: $filter-button-background-hover
