--- a/src/style/components/_modal.sass
+++ b/src/style/components/_modal.sass
@@ -1,4 +1,4 @@
-@import "../base/variables"
+@import '../base/variables'
 
 .modal
     position: fixed
@@ -7,20 +7,20 @@
     width: 100%
     height: 100%
     z-index: 10
-    background-color: white
+    background-color: #fff
     display: flex
     justify-content: center
     align-items: center
     .modal-box
         box-shadow: 2px 6px 25px rgba(0, 0, 0, 0.3)
-        background-color: rgba(255,255,255,1)
+        background-color: rgba(255, 255, 255, 1)
         border-radius: 0 $border-radius-lg 0 $border-radius-lg
         padding: 1rem
         .modal-content
             max-height: calc(100vh - 12rem)
             overflow: auto
             margin: 1rem 0 /* margin to the scrollbar */
-            padding-right: .5rem /* space on the left of the scrollbar */
+            padding-right: 0.5rem /* space on the left of the scrollbar */
             *:first-child
                 margin-top: 0 /* reset */
             .container
