--- a/src/style/layout/_form.sass
+++ b/src/style/layout/_form.sass
@@ -1,14 +1,15 @@
-@import "../base/variables"
+@import '../base/variables'
 
-button:not([class^='mapboxgl-ctrl-']):not(.light-icon-button), .button
+button:not([class^='mapboxgl-ctrl-']):not(.light-icon-button),
+.button
     background: $button-background
-    color: white !important
-    padding: 0.4rem 1rem 0.5rem 1rem
+    color: #fff !important
+    padding: 0.4rem 1rem 0.5rem
     border-radius: 0 $border-radius-lg 0 $border-radius-lg
     cursor: pointer
     display: inline-block
     box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2)
-    transition: all .2s ease-in
+    transition: all 0.2s ease-in
     &.critical
         background: #973737
     &[disabled]
@@ -16,19 +17,22 @@ button:not([class^='mapboxgl-ctrl-']):not(.light-icon-button), .button
         cursor: no-drop
     img.icon
         filter: $filter-white
-        vertical-align: -.13rem
+        vertical-align: -0.13rem
         display: inline-block
-        margin-right: .5rem
-    &:not([disabled]):hover, &:not([disabled]):focus
+        margin-right: 0.5rem
+    &:not([disabled]):hover,
+    &:not([disabled]):focus
         background: $button-background-hover
-    &.critical:not([disabled]):hover, &.critical:not([disabled]):focus
+    &.critical:not([disabled]):hover,
+    &.critical:not([disabled]):focus
         background: #4f2323
 
 button.light-icon-button
     img.icon
         filter: $filter-button-background
-        transition: all .2s ease-in
-    &:hover, &:focus
+        transition: all 0.2s ease-in
+    &:hover,
+    &:focus
         img.icon
             filter: $filter-button-background-hover
 
@@ -38,7 +42,8 @@ a.button
 form
     max-width: 500px
 
-input:not([type="radio"]), textarea
+input:not([type='radio']),
+textarea
     display: block
     padding: 0.5rem
     width: 100%
@@ -46,7 +51,7 @@ input:not([type="radio"]), textarea
     border: 1px solid #cdcdcd
     border-radius: 0 $border-radius-lg 0 $border-radius-lg
     box-shadow: 0 0 2px rgba(114, 114, 114, 0.46)
-    transition: all .2s ease-in
+    transition: all 0.2s ease-in
     &.invalid
         border: 1px solid #de2828
         box-shadow: 0 0 2px rgba(255, 0, 0, 0.36)
@@ -56,7 +61,7 @@ input:not([type="radio"]), textarea
     &:focus
         outline: none /* reset */
 
-input[type="radio"]
+input[type='radio']
     background-color: #ddd
     border-radius: 8px
     display: inline-block
@@ -64,11 +69,11 @@ input[type="radio"]
     position: relative
     margin-bottom: -1px
     width: 16px
-    -webkit-appearance: none
+    appearance: none
     box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.4)
-    transition: all .2s ease-in
-    &:after
-        background-color: #ffffff
+    transition: all 0.2s ease-in
+    &::after
+        background-color: #fff
         border-radius: 4px
         border: 1px solid #7b7b7b
         content: ''
@@ -78,9 +83,9 @@ input[type="radio"]
         height: 8px
         left: 4px
         top: 4px
-    &:checked:after
+    &:checked::after
         background-color: $button-background
-    &:focus:after
+    &:focus::after
         border: 1px solid $button-background-hover
 
 textarea
@@ -91,4 +96,4 @@ label
     color: #808080
     &.radio
         display: inline-block
-        margin: 0 0 0 .5rem
+        margin: 0 0 0 0.5rem
