Cleanup grid system

--- a/src/style/base/_variables.sass
+++ b/src/style/base/_variables.sass
@@ -20,6 +20,7 @@ $text-line-height: 1.6
 $block-space: 2rem
 $button-background: #338956
 $button-background-hover: #29593d
+$container-column-threshold: 1100px
 
 /* hex to filter converter: https://codepen.io/sosuke/pen/Pjoqqp */
 $filter-body-color: invert(19%) sepia(2%) saturate(2%) hue-rotate(326deg) brightness(101%) contrast(97%)
