--- a/src/style/pages/_about.sass
+++ b/src/style/pages/_about.sass
@@ -46,7 +46,7 @@ table.data
 /* some ads blocker block classes containing 'social', so let's put a random string instead */
 .yydchtxork
     h1
-        @media (min-width: 1100px)
+        @media (min-width: $container-column-threshold)
             text-align: center
             margin: auto
             max-width: 30%
