--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -66,6 +66,9 @@ footer
         .nav-item
             margin: $nav-item-space
             padding: $nav-item-space calc(#{$nav-item-space} * 3 / 2)
+            @media (max-width: 450px)
+                margin: 0.2rem
+                padding: 0.6rem calc(0.2rem * 3 / 2)
             display: inline-block
             font-size: $nav-font-size
             &.branding
