Multiple GPS sources

--- a/src/style/base/_typography.sass
+++ b/src/style/base/_typography.sass
@@ -56,5 +56,11 @@ ul.blabla
             height: 12px
             padding: 0 18px 0 0
 
+ul ul
+    list-style: none
+    padding-left: 1rem
+    li::before
+        filter: $filter-grey
+
 .tippy-box ul.blabla li::before
     filter: $filter-white
