--- a/src/style/base/_variables.sass
+++ b/src/style/base/_variables.sass
@@ -27,3 +27,4 @@ $filter-body-color: invert(19%) sepia(2%) saturate(2%) hue-rotate(326deg) bright
 $filter-white: invert(100%) sepia(0%) saturate(7500%) hue-rotate(225deg) brightness(107%) contrast(102%)
 $filter-button-background: invert(38%) sepia(90%) saturate(280%) hue-rotate(92deg) brightness(98%) contrast(94%)
 $filter-button-background-hover: invert(32%) sepia(6%) saturate(3080%) hue-rotate(92deg) brightness(88%) contrast(94%)
+$filter-grey: invert(42%) sepia(13%) saturate(22%) hue-rotate(327deg) brightness(92%) contrast(92%)
