Fix sizing and positioning on medium screen

--- a/src/style/components/_icon.sass
+++ b/src/style/components/_icon.sass
@@ -4,11 +4,11 @@ img.icon
     height: 1rem
 
 .logo
-    height: 27px
-    width: 27px
+    height: $nav-icon-size
+    width: $nav-icon-size
     vertical-align: -6px
     background-image: url('../icons/favicon/compressed_favicon.svg')
-    background-size: 27px
+    background-size: $nav-icon-size
     display: inline-block
 
 /* fine-tuning */
