--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -91,7 +91,8 @@ footer
                 border-radius: 0 $border-radius-lg 0 $border-radius-lg
                 &:focus
                     outline: 1px solid $nav-hover-bg-color
-        .limit-width, .limit-width .nav-item
+        .limit-width,
+        .limit-width .nav-item
             @media (max-width: 1110px)
                 /* reduce size to fit long titles into one line */
                 font-size: calc(#{$nav-font-size} / 1.25)
