Fix size because the like button has been removed

--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -91,4 +91,4 @@ section#story
     .chart-container
         padding-top: 1rem /* the legend on the bottom adds space that needs to be compensated on the top */
         width: 100%
-        height: calc(max(40vh - #{$nav-bar-height} - 1.5 * #{$block-space}, 200px))
+        height: calc(max(40vh - 1.5 * #{$block-space}, 200px))
