--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -16,15 +16,12 @@
 @import 'pages/story'
 @import 'pages/stories'
 
-/*
- * Generate a Woff2 file from: https://www.fontsquirrel.com/tools/webfont-generator
- * Configuration: enable 'Fix GASP Table', do not remove kerning
- */
+/* Read ../fonts/asap/README.md */
 @font-face
     font-family: 'MyBodyFont'
-    src: url('../fonts/asap/postpone-regular-webfont.woff2') format('woff2')
+    src: url('../fonts/asap/ExploreWilder-regular-webfont.woff2') format('woff2')
 
 /* The `font-weight` CSS property does not make the font as bold as desired */
 @font-face
     font-family: 'MyBoldFont'
-    src: url('../fonts/asap/postpone-bold-webfont.woff2') format('woff2')
+    src: url('../fonts/asap/ExploreWilder-bold-webfont.woff2') format('woff2')
