Remove the rounded corner behind the scrollbar

--- a/src/style/layout/_form.sass
+++ b/src/style/layout/_form.sass
@@ -61,6 +61,9 @@ textarea
     &:focus
         outline: none /* reset */
 
+textarea
+    border-radius: 0 0 0 $border-radius-lg
+
 input[type='radio']
     background-color: #ddd
     border-radius: 8px
