Change list bullet style, chevron may be confusing

--- a/src/style/base/_typography.sass
+++ b/src/style/base/_typography.sass
@@ -47,7 +47,7 @@ ul.blabla
         content: ''
         display: inline-block
         height: 16px
-        background-image: url('icons/chevron-forward-outline.svg')
+        background-image: url('icons/leaf-outline.svg')
         background-size: contain
         background-repeat: no-repeat
         padding: 0 24px 0 0
