--- a/src/style/base/_base.sass
+++ b/src/style/base/_base.sass
@@ -47,6 +47,12 @@ a:focus:not(.nav-item)
     to
         transform: rotate(359deg)
 
+@keyframes fade-in
+    from
+        opacity: 0
+    to
+        opacity: 1
+
 @keyframes hourglass
     0%
         transform: rotate(0deg)
