--- a/src/style/base/_helpers.sass
+++ b/src/style/base/_helpers.sass
@@ -1,14 +1,17 @@
 .mr-3
-    margin-right: 0.3rem
+    margin-right: 0.3rem !important
 
 .ml-3
-    margin-left: 0.3rem
+    margin-left: 0.3rem !important
 
 .mt-3
-    margin-top: 0.3rem
+    margin-top: 0.3rem !important
 
 .m-30
-    margin: 3rem
+    margin: 3rem !important
+
+.mb-3
+    margin-bottom: 0.3rem !important
 
 .p-0
     padding: 0 !important
