--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -20,7 +20,7 @@ footer
             .photo-title
                 display: inline-block
                 margin-top: $nav-item-space
-                padding: $nav-item-space calc(#{$nav-item-space} * 3 / 2)
+                padding: $nav-item-space calc(#{$nav-item-space} * 3 / 2) 0 0 0
             @media (max-width: 1024px)
                 .photo-title
                     position: absolute
@@ -68,9 +68,6 @@ footer
         .nav-item
             margin: $nav-item-space
             padding: $nav-item-space calc(#{$nav-item-space} * 3 / 2)
-            @media (max-width: 450px)
-                margin: 0.1rem
-                padding: 0.65rem calc(0.1rem * 3 / 2)
             display: inline-block
             font-size: $nav-font-size
             &.branding
@@ -91,12 +88,23 @@ footer
                 border-radius: 0 $border-radius-lg 0 $border-radius-lg
                 &:focus
                     outline: 1px solid $nav-hover-bg-color
+        .photo-metadata-wrapper
+            margin-left: 0
+            cursor: help
+            @media (max-width: 1024px)
+                margin-left: $nav-item-space
+            .icon
+                vertical-align: middle
+                height: 1rem
+                @media (max-width: 1024px)
+                    vertical-align: calc(#{$nav-font-size} - #{$nav-icon-size} + 1.5px)
+                    height: $nav-icon-size
         .limit-width,
         .limit-width .nav-item
             @media (max-width: 1110px)
                 /* reduce size to fit long titles into one line */
                 font-size: calc(#{$nav-font-size} / 1.25)
-        a
+        a:not(.normal-a)
             text-decoration: none
             color: $body-color !important
             border-radius: 0 $border-radius-lg 0 $border-radius-lg
