Remove fancy waves

--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -31,11 +31,11 @@ footer
                         display: inline-block
                     .short-item a
                         color: #000 !important
-                        text-decoration: rgba(0, 0, 0, 0.4) wavy underline
+                        text-decoration: rgba(0, 0, 0, 0.4) underline
                         &:hover,
                         &:focus
                             background-color: inherit
-                            text-decoration: #000 wavy underline
+                            text-decoration: #000 underline
                 @media (orientation: landscape)
                     top: 0
                     width: calc(#{$nav-bar-height} + 1px)
