--- a/src/style/base/_base.sass
+++ b/src/style/base/_base.sass
@@ -11,7 +11,7 @@ body
 a,
 a:visited
     color: #2e8f6b
-    text-decoration: rgba(46, 143, 107, 0.37) wavy underline
+    text-decoration: rgba(46, 143, 107, 0.37) underline
     text-underline-position: under
     text-underline-offset: 0 /* to have the same style on both Chrome and Firefox */
     transition: all 0.2s ease-in
@@ -19,7 +19,7 @@ a:visited
 a:hover:not(.nav-item),
 a:focus:not(.nav-item)
     color: $button-background-hover
-    text-decoration: rgba(46, 143, 107, 1) wavy underline
+    text-decoration: rgba(46, 143, 107, 1) underline
 
 .tippy-box
     box-shadow: 2px 2px 3px rgba(51, 51, 51, 0.46) !important
@@ -31,11 +31,11 @@ a:focus:not(.nav-item)
     a,
     a:visited
         color: #fff
-        text-decoration: rgba(255, 255, 255, 0.37) wavy underline
+        text-decoration: rgba(255, 255, 255, 0.37) underline
     a:hover,
     a:focus
         color: #fff
-        text-decoration: #fff wavy underline
+        text-decoration: #fff underline
 
 .loading-icon
     img
