Make cursor navigation obvious

--- a/src/style/pages/_photo.sass
+++ b/src/style/pages/_photo.sass
@@ -9,10 +9,10 @@
         height: 100vh
         &.goto-prev-photo
             left: 0
-            cursor: w-resize
+            cursor: url('../icons/arrow-back-circle-outline.cursor.svg') 16 16, w-resize
         &.goto-next-photo
             right: 0
-            cursor: e-resize
+            cursor: url('../icons/arrow-forward-circle-outline.cursor.svg') 16 16, e-resize
     #current-photo
         display: flex
         justify-content: center
